--- a/Libs/tufteDesign/tufteDesign.css
+++ b/Libs/tufteDesign/tufteDesign.css
@@ -1,31 +1,11 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic');
 
-/* Import ET Book styles
-   adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
+/*
+    v2017.10.10
+    - font-rus Vollkorn
+*/
 
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
-             src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: normal; }
-
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
-             src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: italic; }
-
-@font-face { font-family: "et-book";
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-             src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
-             font-weight: bold;
-             font-style: normal; }
-
-@font-face { font-family: "et-book-roman-old-style";
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-             src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-             font-weight: normal;
-             font-style: normal; }
 
 /* Tufte CSS styles */
 /* ZL: parent class added */
@@ -35,7 +15,7 @@
        margin-left: auto;
        margin-right: auto;
        padding-left: 12.5%;
-       font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+       font-family: "Vollkorn", et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
        background-color: #fffff8;
        color: #111;
        max-width: 1400px;
@@ -47,7 +27,8 @@
 
 
 .tufteDesign h1 { font-weight: 400;
-     margin-top: 4rem;
+     margin-top: 0rem;
+     padding-top: 4rem;
      margin-bottom: 1.5rem;
      font-size: 3.2rem;
      line-height: 1; }
@@ -105,7 +86,7 @@
 .tufteDesign div.epigraph { margin: 5em 0; }
 
 .tufteDesign div.epigraph > blockquote { margin-top: 3em;
-                            margin-bottom: 3em; }
+                            margin-bottom: 3em; margin-left: 3rem; }
 
 .tufteDesign div.epigraph > blockquote,
 .tufteDesign div.epigraph > blockquote > p { font-style: italic; }
@@ -141,17 +122,16 @@
          -webkit-margin-end: 0;
          margin: 0 0 3em 0; }
 
-.tufteDesign figcaption { float: right;
-             clear: right;
+.tufteDesign figcaption { float: none; margin-left: 20%;
              margin-top: 0;
              margin-bottom: 0;
              font-size: 1.1rem;
              line-height: 1.6;
              vertical-align: baseline;
              position: relative;
-             max-width: 40%; }
+             max-width: 100%; }
 
-.tufteDesign figure.fullwidth figcaption { margin-right: 24%; }
+/*.tufteDesign figure.fullwidth figcaption { margin-right: 24%; }*/
 
 /* Links: replicate underline that clears descenders */
 .tufteDesign a:link,
@@ -270,7 +250,7 @@
                          width: 100%;
                          height: 100%; }
 
-@media (max-width: 760px) {
+@media (max-width: 1000px) {
     .tufteDesign { width: 84%;
            padding-left: 8%;
            padding-right: 8%; }
@@ -298,8 +278,30 @@
                                            width: 95%;
                                            margin: 1rem 2.5%;
                                            vertical-align: baseline;
-                                           position: relative; }
+                                           position: relative;
+                                        padding: 1rem 2.5%;
+                                        margin:0;
+                                        background-color: azure; }
     .tufteDesign label { cursor: pointer; }
     .tufteDesign div.table-wrapper,
     .tufteDesign table { width: 85%; }
     .tufteDesign img { width: 100%; } }
+
+/*
+zl settings
+*/
+
+.tufteDesign > article:first-child {
+    padding-top: 0;
+}
+.tufteDesign ul {
+    list-style: disc;
+}
+.tufteDesign ol {
+    list-style: decimal;
+}
+@media (max-width: 1000px) {
+    .tufteDesign label.margin-toggle {
+        color: #0ABFBC;
+    }
+}
