--- a/app3K/app/css/components.css
+++ b/app3K/app/css/components.css
@@ -54,6 +54,14 @@ v2017.11.09 cTableData
 /* table addon --compactMobile */
 
 @media all and (max-width:599px) {
+    .cTableData.cTableData--compactMobile ,
+    .cTableData.cTableData--compactMobile table,
+    .cTableData.cTableData--compactMobile thead,
+    .cTableData.cTableData--compactMobile tbody,
+    .cTableData.cTableData--compactMobile tfooter,
+    .cTableData.cTableData--compactMobile tr {
+        display: block;
+    }
     .cTableData.cTableData--compactMobile th,
     .cTableData.cTableData--compactMobile td {
         display: block;
@@ -62,6 +70,12 @@ v2017.11.09 cTableData
         padding-left: 0;
         padding-right: 0;
         border: 0;
+    }
+    .cTableData.cTableData--compactMobile[data-table-type] table tr > * {
+        text-align: left;
+    }
+    .cTableData.cTableData--compactMobile[data-table-type] table tr > *:not(th) {
+        font-family: inherit;
     }
     .cTableData.cTableData--compactMobile thead th {
         text-align: right;
@@ -83,6 +97,28 @@ v2017.11.09 cTableData
     }
 }
 
+
+/* table addon --hasDataTitle */
+
+@media all and (max-width:599px) {
+    .cTableData.cTableData--hasDataTitle thead {
+        display: none;
+    }
+    .cTableData.cTableData--hasDataTitle th[data-title],
+    .cTableData.cTableData--hasDataTitle td[data-title] {
+        position: relative;
+        padding-left: 8rem;
+        box-sizing: border-box;
+    }
+    .cTableData.cTableData--hasDataTitle th[data-title]:before,
+    .cTableData.cTableData--hasDataTitle td[data-title]:before {
+        content: attr(data-title) ": ";
+        position: absolute;
+        display: block;
+        margin-left: -8rem;
+        width: 7.5rem;
+    }
+}
 
 /* table content */
 
