--- a/app4K/app/lib/tufteDesign.css
+++ b/app4K/app/lib/tufteDesign.css
@@ -21,7 +21,7 @@
 
 .tufteDesign {
     width: 87.5%;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: auto;
     padding-left: 12.5%;
     font-family: "Vollkorn", et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
@@ -449,6 +449,7 @@ zl settings
     list-style: decimal;
 }
 
+/* color contrast for hidden content */
 @media (max-width: 900px) {
     .tufteDesign label.margin-toggle {
         color: #0ABFBC;
@@ -458,6 +459,7 @@ zl settings
         background-color: azure;
     }
 }
+/* */
 
 .tufteDesign th,
 .tufteDesign td {
