--- a/app4K/app/app4k/components.css
+++ b/app4K/app/app4k/components.css
@@ -14,8 +14,7 @@ v2017.12.17 app4K.4001
     padding: 0;
     padding-bottom: 1rem;
     font-weight: normal;
-    font-size: 1.2rem;
-    font-family: sans-serif;
+    font-size: 1rem;
     opacity: .5;
 }
 .cTitleAsBlock {
@@ -152,13 +151,7 @@ Stage header
 */
 
 .cSiteHeader {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: center;
-
+    display: block;
     padding-left: 12.5%;
     padding-right: 12.5%;
 }
@@ -253,12 +246,14 @@ Card design cCardeQuat
     margin-top: 1rem;
     margin-bottom: .5rem;
     line-height: 1.2;
-    font-size:2.1vw;
+    font-size: 2.1vw;
+    font-weight: 400;
 }
 .cCardeQuatCard .aSubtitle {
     padding: 0;
     margin: 0;
-    font-size:1.7vw;
+    font-size: 1.7vw;
+    font-weight: 400;
 }
 @media screen and (min-width:1200px) {
     .cCardeQuatCard .aTitle {
@@ -392,6 +387,32 @@ Blog style data
     margin-top: 2rem;
     padding-top: 2rem;
 }
+.cBlogCard .aTitle {
+    font-weight: 400;
+    font-size: 1.4em;
+    line-height: 1;
+    margin-top: 0;
+    margin-bottom: .5em;
+}
+.cBlogCard .aSubtitle {
+    font-weight: 400;
+    font-size: 1.2em;
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: .5em;
+}
 
+/*
+Contacts
+*/
+
+.cContactArea {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+}
 
 /**/
