sushi and eklers

--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -2,7 +2,7 @@
 
 /*
      600px      900px                1200px       1800px
-phone     tablet     landscape tablet      desctop      big
+phone     tablet     landscape tablet      desktop      big
 */
 
 
